# PyTorchTuto

./: README.md  pyproject.toml
basics/: 01_PyTorch_Introduction.py  02_PyTorch_FashionMNISTImageClassification.py  02_PyTorch_PreparingData.py
basics/source/: CustomDataset.py  FashionMNISTImageClassifier.py
basics/source/04_PyTorch_NLP/: S06_French_Text_Sentiment.py  test.py
notebooks/basics/: 04_PyTorch_NLP.ipynb
notebooks/basics/04_PyTorch_NLP/: S02_RepresentWordsWithEmbedding.ipynb  S03_CapturePatternsWithRecurrentNeuralNetworks.ipynb  S04_TextGenerationWithRNN.ipynb  S05_AttentionModelsAndTransformers.ipynb
