[tool.poetry]
name = "src"
version = "0.1.0"
description = "play ground for pytorch"
authors = ["pengfei <liu.pengfei@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
torchvision = "^0.10.0"
matplotlib = "^3.4.2"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
